--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ nav ul {
 
 .activeresponsive {
   padding-top: 4em;
-  background-color: rgba(88, 125, 161, 0.6);
+  background-color: rgb(88, 125, 161);
   width: 100vw;
 }
 
@@ -96,7 +96,9 @@ h2 {
 
 @media screen and (min-width: 320px) {
 	
-
+  aside {
+    display: none;
+  }
 
 }
   
@@ -122,6 +124,10 @@ h2 {
   h2 {
     font-size: 1.7em;
   }
+  
+  aside {
+    display: none;
+  }
 
 }
 
@@ -134,8 +140,57 @@ h2 {
   }
   
   .active li a {
-    display: block;
+    display: none;
   }
   
+  /*-----------header----------*/
+  
+   header {
+    height: 10em;
+  }
+  
+  .user-profile {
+    width: 6em;
+    top: 2.5em;
+    left: 72%;
+    transform: none;
+  }
+  
+  header h2 {
+    left: 89%;
+    top: 2.5em;
+    width: auto;
+  }
+  
+  .bell-icon {
+    left: 65%;
+    top: 5em;
+  }
+  
+  .bell-icon, h2, .user-profile {
+
+  }
+
+  
+  /*-------side navigation------*/
+  
+  aside {
+    display: block;
+    float: left;
+    width: 7em;
+    height: 100vh;
+    background-color: rgb(88, 125, 161);
+    padding-top: 2em;
+  }
+  
+  aside nav {
+    background-color: rgb(88, 125, 161);
+  }
+  
+  aside nav li {
+    padding-bottom: 2em;
+    padding-left: 1em;
+  }
+
 }
 
