--- a/css/main.css
+++ b/css/main.css
@@ -169,7 +169,10 @@ footer {
 }
 
 @media screen and (min-width: 1024px) {
-	
+  
+  html {
+    height: 100vh;
+  }
 
 /*-----toggle button-------*/
 
@@ -213,6 +216,7 @@ footer {
   /*-------side navigation------*/
   
   aside {
+    height: 100vh;
     display: inline-block;
     float: left;
     width: 7em;
@@ -236,16 +240,14 @@ footer {
 		padding-top: 2em;
 		display: flex;
 		flex-direction: column;
-		float: right;
-		width: 90%;
-		height: 100vh;
+		width: 70em;
+        margin: auto;
 	}
 	
-	.charts canvas {
-		padding-bottom: 2.5em;
-		width: 90%;
-		margin: auto;
+	.chartjs-render-monitor {
+		padding-bottom: 4em;
 	}
-
+ 
+    
 }
 
